# nekosama

./: LICENSE  README.md  doc.md  main.py  pyproject.toml  requirements.txt  requirments.txt  setup.cfg  setup.py  temp.m3u  test.py  ui.py
.github/workflows/: publish.yml
core/: __init__.py  consts.py  grabber.py  log.py  scrapper.py  utils.py
nekosama/: __init__.py  __main__.py  consts.py  core.py  download.py  utils.py
nekosama/objects/: anime.py  database.py  episode.py
src/nekosama/: __main__.py  __name__.py  consts.py  core.py  download.py  utils.py
