[project]
name = "nekosama"
version = "4.0"
description = "API Wrapper for neko-sama.fr"
authors = [
    {name = "Egsagon", email = "egsagon12@gmail.com"}
]
dependencies = [
    "httpx",
    "yt_dlp",
    "rich[progress]"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./"]