[project]
name = "nekosama"
version = "4.0"
description = "API Wrapper for neko-sama.fr"
authors = [
    {name = "Egsagon", email = "egsagon12@gmail.com"}
]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["nekosama", "anime", "downloader", "french"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python"
]
dependencies = [
    "httpx",
    "yt_dlp",
    "rich[progress]"
]
requires-python = ">=3.11"

[project.urls]
Repository = "https://github.com/Egsagon/nekosama"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./"]
