[metadata]
name = nekosama
version = 3.3
description = A neko sama API
author = Egsagon
author_email = egsagon12@gmail.com
url = https://github.com/Egsagon/neko-sama-api/
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
platforms = unix, linux, win32, cygwin
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11

[options]
packages =
    nekosama
install_requires = 
    requests>=2
    ffmpeg-progress-yield>=0.7.8
python_requires = >=3.11
package_dir=
    =src
